# sw

./: .clang-format  .gitignore  meson.build
src/: main.cpp
src/lib/: game.cpp  game.h  player_ship.cpp  player_ship.h  projectile.cpp  projectile.h  projectile_vector.cpp  projectile_vector.h  resource_manager.cpp  ship.cpp  ship.h  sprite_utils.cpp  sprite_utils.h  star.cpp  star.h  sun.cpp  sun.h  texture_manager.cpp  texture_manager.h  texture_manager.hpp  window.cpp  window.h  wrapping_sprite.cpp  wrapping_sprite.h
